# videoGEO2

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/videogeo-run/: SKILL.md
.codex/agents/: director.toml  editor.toml  gate-reviewer.toml  script-orchestrator.toml
docs/: development-infrastructure.md  spec-video-quality-iteration-v1.md
lessons/: lesson_index.json  lessons.jsonl  product_tvc.md  seedance.md  storyboard.md  subtitles.md  video_quality.md
videogeo/: __init__.py  __main__.py  audit.py  captions.py  compile.py  config.py  executor.py  hyperframes.py  iteration.py  lessons.py  visual_review.py
videogeo/capabilities/: __init__.py  ai_service.py  base.py  mock.py
videogeo/gates/: __init__.py  professional.py  rules.py
videogeo/gates/rubrics/: assets.md  brief.md  captions.md  delivery.md  final.md  script.md  storyboard.md
videogeo/schemas/: __init__.py  assets.py  audit.py  brief.py  captions.py  edit.py  gate.py  iteration.py  lessons.py  plan.py  quality.py  requirement.py  script.py
